--- a/index.html
+++ b/index.html
@@ -17,13 +17,35 @@
               <div class="thirteen wide column">
                 <div class="stackable grid">
                   <div class="sixteen wide column">
-                    <!-- Name, job, contacts -->
+                    <ul>
+                      <li>
+                        <a href="#">
+                          <span>https://www.fb.com/TarasShevchnko</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <span>notRealKobzar228@moryntsi.selo</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <span>https://twitter.com/fakeKobzarTaras</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <span>https://www.instagram.com/kobzarKobzarevich</span>
+                        </a>
+                      </li>
+                    </ul>
                   </div>
                   <div class="sixteen wide mobile only column">
                     <div class="divider"></div>
                   </div>
                   <div class="sixteen wide column">
-                    <!-- Intro -->
+                    <h2>Résumé</h2>
+                    <p>&mdash;My name is Taras Hryhorovych Shevchenko a. k. a. Kobzar Taras, or just Kobzar. I am a Ukrainian poet, writer, artist, public and political figure, as well as folklorist. My literary heritage is regarded to be the foundation of modern Ukrainian literature and, to a large extent, the modern Ukrainian language.</p>
                   </div>
                 </div>
               </div>
