--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <div class="stackable grid">
             <div class="row">
               <div class="three wide center aligned column">
-                <!-- Avatar -->
+                <img class="avatar" src="kobzarAva.jpg" alt="samwell">
               </div>
               <div class="thirteen wide column">
                 <div class="stackable grid">
